# cc-feishu-plugin

./: .gitignore  CHANGELOG.md  README.md  build.py  build_cli.py  build_nuitka.py  config.example.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish.yml  release.yml
cc_feishu_bridge/: banner.py  config.py  cron_scheduler.py  main.py  proactive_scheduler.py  restarter.py  skill_md.py  skill_nudge.py
cc_feishu_bridge/claude/: chat_lock.py  feishu_file_tools.py  integration.py  integration_pool.py  memory_manager.py  memory_tools.py  qmd_adapter.py  session_manager.py
cc_feishu_bridge/feishu/: auth_flow.py  card.py  client.py  media.py  message_handler.py  should_respond.py  ws_client.py
cc_feishu_bridge/format/: edit_diff.py  questionnaire_card.py  reply_formatter.py
cc_feishu_bridge/install/: api.py  flow.py
cc_feishu_bridge/skill_search/: sources.py
skills/cc-feishu-send-file/: skill.md
src/: config.py  main.py
src/claude/: integration.py
src/feishu/: client.py  ws_client.py  (+1 more)
tests/: test_auth_flow.py  test_chat_config.py  test_chat_lock.py  test_config_path.py  test_device_auth.py  test_edit_diff.py  test_feishu_auth_command.py  test_feishu_client.py  test_group_chat.py  test_install_api.py  test_integration_pool.py  test_main_ws.py  test_media.py  test_memory_manager.py  test_message_handler.py  test_message_handler_preference_injection.py  test_proactive_scheduler.py  test_qmd_adapter.py  test_questionnaire_card.py  test_reply_formatter.py  test_restarter.py  test_send_command.py  test_session_manager.py  test_ws_client.py
(+9 files in other folders)
